--- a/package.json
+++ b/package.json
@@ -11,11 +11,19 @@
   "dependencies": {
     "expo": "~48.0.15",
     "expo-status-bar": "~1.4.4",
+    "prop-types": "^15.8.1",
     "react": "18.2.0",
-    "react-native": "0.71.7"
+    "react-native": "0.71.7",
+    "@types/react": "~18.0.27",
+    "expo-checkbox": "~2.3.1"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/react": "^18.2.6",
+    "@types/react-native": "^0.71.6",
+    "eslint": "^8.40.0",
+    "eslint-plugin-react": "^7.32.2",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "private": true
 }
