--- a/package.json
+++ b/package.json
@@ -9,14 +9,19 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "1.17.11",
+    "@react-navigation/bottom-tabs": "^6.5.7",
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
+    "@types/react": "~18.0.27",
     "expo": "~48.0.15",
+    "expo-checkbox": "~2.3.1",
     "expo-status-bar": "~1.4.4",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
-    "@types/react": "~18.0.27",
-    "expo-checkbox": "~2.3.1",
-    "@react-native-async-storage/async-storage": "1.17.11"
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-screens": "~3.20.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
