--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "expo": "~48.0.15",
     "expo-checkbox": "~2.3.1",
     "expo-status-bar": "~1.4.4",
+    "nanoid": "^4.0.2",
     "prop-types": "^15.8.1",
     "react": "18.2.0",
     "react-native": "0.71.7",
+    "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0"
   },
