--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-native": "0.71.7",
     "react-native-get-random-values": "^1.9.0",
     "react-native-safe-area-context": "4.5.0",
-    "react-native-screens": "~3.20.0"
+    "react-native-screens": "~3.20.0",
+    "styled-components": "^5.3.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
